--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +18,15 @@
   },
   "homepage": "https://github.com/nickmckenney/backendnodeexpress#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "@sendgrid/mail": "^6.4.0",
+    "body-parser": "^1.19.0",
+    "concurrently": "^5.3.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "nodemailer": "^6.4.11",
+    "nodemon": "^1.19.1"
   },
   "engines": {
-    "node":"12.10.0"
+    "node": "12.10.0"
   }
 }
